@@ -1,3 +1,15 @@
+MODELER-497
+===========
+
+  - Fixed: walking functionality from MODELER-437 iterates multiple times over the same component
+
+
+MODELER-437
+===========
+
+  - Refactor walking the UIComponent objects within a panels collection
+  
+
 MODELER-530
 ===========
 
